# matmul_intro

./: .gitmodules  CMakeLists.txt  LICENSE  Makefile  compile_commands.json
bench/: Nanobench.cxxm  dot_bench.cpp  dot_product_bench.cpp  matmul_bench.cpp  matrix_vector_bench.cpp  sum_bench.cpp
include/: LoopMacros.hxx
mod/: DotProduct.cxxm  MatMul.cxxm  MatrixVectorMultiply.cxxm  SIMD.cxxm  Sum.cxxm
test/: test_matmul.cpp
